--- a/examples/runtime_babelfish.yaml
+++ b/examples/runtime_babelfish.yaml
@@ -1,8 +1,8 @@
 apiVersion: node.k8s.io/v1alpha1  # RuntimeClass is defined in the node.k8s.io API group
 kind: RuntimeClass
 metadata:
-  name: cri.babelfish
+  name: multicri
   # The name the RuntimeClass will be referenced by
   # RuntimeClass is a non-namespaced resource
 spec:
-  runtimeHandler: cri.babelfish 
+  runtimeHandler: multicri
