--- a/examples/job-perl-mpi-slurm-local.yaml
+++ b/examples/job-perl-mpi-slurm-local.yaml
@@ -12,7 +12,7 @@ spec:
       runtimeClassName: multicri
       containers:
       - name: job-slurm-container
-        image: multicri/local-def-file.singularity.def:latest
+        image: multicri/docker-repository.alpine:3.8
         command: ["sleep","60","&&","ls", "/"]
         env:
         - name: MPI_VERSION
